Bug 49546 - [sna] fcccc5528b8696fb4f9b3f9f528673b95d98a907 caused rendering bugs
Summary: [sna] fcccc5528b8696fb4f9b3f9f528673b95d98a907 caused rendering bugs
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-06 04:17 UTC by Sami Farin
Modified: 2012-05-08 08:24 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
sna_a1f08b8850.png (151.65 KB, image/png)
2012-05-06 04:17 UTC, Sami Farin
no flags Details
sna_a1f08b8850-2.png (160.45 KB, image/png)
2012-05-06 04:18 UTC, Sami Farin
no flags Details
intel_reg.txt (12.03 KB, text/plain)
2012-05-08 07:08 UTC, Sami Farin
no flags Details
Xorg.0.log (21.37 KB, text/plain)
2012-05-08 07:31 UTC, Sami Farin
no flags Details

Description Sami Farin 2012-05-06 04:17:13 UTC
if my git bisect went without errors, this is the commit causing the problems:

a1f08b8850616952fb0babe2275eb36b13a380ec is the first bad commit
commit a1f08b8850616952fb0babe2275eb36b13a380ec
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu May 3 14:53:29 2012 +0100

    sna: Don't discard GPU buffer if we only want to read back for the operation
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

:040000 040000 1b90d49d261b8d1a4df27025df8fb02162864f9a 5df9ba640509b32f5c522c703e800dcb4b5e517e M      src

The bug is triggered when using chrome for a couple of minutes.
For example, when zooming, old stuff is still visible (see attached sna_a1f08b8850.png).
Comment 1 Sami Farin 2012-05-06 04:17:51 UTC
Created attachment 61094 [details]
sna_a1f08b8850.png
Comment 2 Sami Farin 2012-05-06 04:18:15 UTC
Created attachment 61095 [details]
sna_a1f08b8850-2.png
Comment 3 Sami Farin 2012-05-06 04:20:12 UTC
my earlier bisect pointed to d47e98dd64c0b9fe2979db42622c5ee8168e8b35, but I think that was too hastily done bisect..
Comment 4 Sami Farin 2012-05-06 04:32:05 UTC
fcccc5528b8696fb4f9b3f9f528673b95d98a907 could also be the culprit, too.. =)

but I can say with certainty that I used a206a1eee1fb for six days without problems.
Comment 5 Chris Wilson 2012-05-06 04:46:35 UTC
Is there a particular site that demonstrates the error upon zoom? Using chromium-18 (Debian sid) on PineView doesn't seem to trigger the error, afaict so far.
Comment 6 Sami Farin 2012-05-06 05:00:51 UTC
it was quite easy to trigger with any site, the example in first screencap was randomly picked from news.google.com
http://www.eweek.com/c/a/Mobile-and-Wireless/iPhone-5-to-be-Thinner-with-Bigger-Screen-306451/

but you don't necessarily trigger it every time, might require more browsing =)

btw. I have gen6 (Core i5-2500K CPU), xorg-x11-server-Xorg-1.12.0-2.fc17.x86_64
Comment 7 Chris Wilson 2012-05-06 05:04:14 UTC
And which WM? That will also influence timings and code paths taken.
Comment 8 Sami Farin 2012-05-06 05:06:03 UTC
openbox-3.4.11.2 without compositing
Comment 9 Sami Farin 2012-05-08 07:08:18 UTC
Created attachment 61230 [details]
intel_reg.txt
Comment 10 Chris Wilson 2012-05-08 07:18:14 UTC
Can you attach your Xorg.0.log? (In this particular case, I want to see which kernel.)
Comment 11 Sami Farin 2012-05-08 07:27:59 UTC
kernel 3.4.0-rc4-f7b00693, mesa 0ad0bc5af5679
Comment 12 Sami Farin 2012-05-08 07:31:07 UTC
Created attachment 61234 [details]
Xorg.0.log
Comment 13 Chris Wilson 2012-05-08 08:24:58 UTC
Should be fixed by:
commit a3d37fb29f8dffb0e370ad95783994aaa7eccfaf
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue May 8 15:47:14 2012 +0100

    sna: Force remapping for IO transfer
    
    Should fix regression from fcccc5528 (sna: Improve handling of inplace
    IO for large transfers) whereby it was aborting the transfer it we need
    to remap the buffer for the upload.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=49546
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.